--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
-  "name": "my-storybook",
+  "name": "oal-my-storybook-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "homepage": "https://oscar-aguilar.com",
+  "repository": {
+    "url": "https://github.com/OscarAguilarL/sb-components",
+    "type": "git"
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "typescript": ">=4.0.0"
+  },
+  "release": {
+    "branches": "main"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -17,10 +36,12 @@
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "build": "build-storybook -o docs",
+    "build": "yarn clean && tsc && yarn copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o docs",
-    "chromatic": "npx chromatic --project-token=3f97e65b76a3"
+    "chromatic": "npx chromatic --project-token=3f97e65b76a3",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +68,17 @@
     "@storybook/addon-links": "^6.4.13",
     "@storybook/react": "^6.4.13",
     "babel-loader": "^8.2.3",
-    "chromatic": "^6.4.1"
-  }
+    "chromatic": "^6.4.1",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.2"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
